# JourneyToMadness-Informatica

Programación_2/Laboratorio_5/Lab2025_1/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_5/Lab2025_1/sources/: BibliotecaConductores.cpp  BibliotecaConductores.hpp  BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  BibliotecaInfracciones.cpp  BibliotecaInfracciones.hpp  utils.hpp
Programación_2/Laboratorio_5/Lab5_2023_2/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_5/Lab5_2023_2/sources/: FlotaGenerica.cpp  FlotaGenerica.hpp  PilaConEnteros.cpp  PilaConEnteros.hpp  PilaConRegistros.cpp  PilaConRegistros.hpp  utils.hpp
Programación_2/Laboratorio_5/Lab5_2024_1/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_5/Lab5_2024_1/sources/: BibliotecaGenerica.cpp  BibliotecaGenerica.hpp  FuncionesEnteras.cpp  FuncionesEnteras.hpp  FuncionesRegistros.cpp  FuncionesRegistros.hpp  utils.hpp
Programación_2/Laboratorio_6/LAB6_2023_2/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_6/LAB6_2023_2/Programa/funciones/: Almacen.cpp  Cliente.cpp  Producto.hpp  utils.hpp
Programación_2/Laboratorio_6/LAB6_2023_2/funciones/: Almacen.hpp  Cliente.hpp  Pedido.cpp  Pedido.hpp  Producto.cpp  ProductoEntregado.cpp  ProductoEntregado.hpp
Programación_2/Laboratorio_6/Lab6_2024_1/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_6/Lab6_2024_1/Programa/funciones/: Espacio.cpp  Estate.cpp  Estate.hpp  utils.hpp
Programación_2/Laboratorio_6/Lab6_2024_1/funciones/: Biblioteca.cpp  Biblioteca.hpp  Espacio.hpp  Libro.cpp  Libro.hpp
Programación_2/Laboratorio_6/Lab6_2024_2/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_6/Lab6_2024_2/funciones/: Cliente.cpp  Cliente.hpp  Plato.cpp  Plato.hpp  Restaurante.cpp  Restaurante.hpp  utils.hpp
Programación_2/Laboratorio_6/Lab6_2025_1/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_6/Lab6_2025_1/sources/: Empresa.cpp  Empresa.hpp  Infraccion.cpp  Infraccion.hpp  MinisterioDeTransportes.cpp  MinisterioDeTransportes.hpp  Multa.cpp  Multa.hpp  utils.hpp
Programación_2/Laboratorio_6/Lab_6_2024_2/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_6/Lab_6_2024_2/Programa/funciones/: Cliente.cpp  Cliente.hpp  Plato.cpp  Plato.hpp  Restaurante.cpp  Restaurante.hpp  Utils.hpp
Programación_2/Laboratorio_6/Lab_6_2025_1/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_6/Lab_6_2025_1/Programa/funciones/: Empresa.cpp  Empresa.hpp  Infraccion.cpp  Infraccion.hpp  MinisterioDeTransporte.cpp  MinisterioDeTransporte.hpp  Multa.cpp  Multa.hpp  utils.hpp
Programación_2/Laboratorio_6/Lab_7_2023_1(Tema Lab6)/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_6/Lab_7_2023_1(Tema Lab6)/Programa/funciones/: alumno.cpp  alumno.hpp  alumnonota.cpp  alumnonota.hpp  nota.cpp  nota.hpp  sources.cpp  sources.hpp  utils.hpp
Programación_2/Laboratorio_7/Lab07_2024_1/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_7/Lab07_2024_1/Programa/sources/: Biblioteca.cpp  Biblioteca.hpp  Enciclopedia.cpp  Enciclopedia.hpp  Espacio.cpp  Espacio.hpp  Estante.cpp  Estante.hpp  EstanteHorizontal.cpp  EstanteHorizontal.hpp  EstanteVertical.cpp  EstanteVertical.hpp  Libro.cpp  Libro.hpp  Novela.cpp  Novela.hpp  utils.hpp
Programación_2/Laboratorio_7/Lab07_2024_2/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_7/Lab07_2024_2/Programa/funciones/: Bebida.cpp  Bebida.hpp  Comanda.cpp  Comanda.hpp  Entrada.cpp  Entrada.hpp  PlatoFondo.cpp  PlatoFondo.hpp  Producto.cpp  Producto.hpp  Restaurante.cpp  Restaurante.hpp  utils.hpp
Programación_2/Laboratorio_7/Lab07_2025_1/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_7/Lab07_2025_1/Programa/sources/: CentralDeMonitoreo.cpp  CentralDeMonitoreo.hpp  Comunes.cpp  Comunes.hpp  Drone.cpp  Drone.hpp  DroneEstacionamiento.cpp  DroneEstacionamiento.hpp  DroneSemaforo.cpp  DroneSemaforo.hpp  DroneVelocidad.cpp  DroneVelocidad.hpp  Flota.cpp  Flota.hpp  Infraccion.cpp  Infraccion.hpp  MinisterioDeTransportes.cpp  MinisterioDeTransportes.hpp  utils.hpp
Programación_2/Laboratorio_7/Lab_6_TecnProgra_Antifica/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_7/Lab_6_TecnProgra_Antifica/Programa/sources/: Categoria.cpp  Categoria.hpp  Plataforma.cpp  Plataforma.hpp  Streams.cpp  Streams.hpp  utils.hpp
Programación_2/Laboratorio_8/Lab08_(Polimorfismo_Adaptado_Lab_7_2025_2)/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_8/Lab08_(Polimorfismo_Adaptado_Lab_7_2025_2)/Programa/sources/: Arbol.cpp  Arbol.hpp  GestorStreamers.cpp  GestorStreamers.hpp  Metrica.cpp  Metrica.hpp  MetricaBasica.cpp  MetricaBasica.hpp  MetricaCalidad.cpp  MetricaCalidad.hpp  MetricaEngagement.cpp  MetricaEngagement.hpp  Nodo.cpp  Nodo.hpp  Streamer.cpp  Streamer.hpp  StreamerPago.cpp  (+5 more)
Programación_2/Laboratorio_8/Lab08_(lab07_2025_2_ListaEnlazadaDoble)/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_8/Lab08_(lab07_2025_2_ListaEnlazadaDoble)/sources/: GestorStreamers.cpp  GestorStreamers.hpp  ListaDoble.cpp  ListaDoble.hpp  Metrica.cpp  Metrica.hpp  MetricaBasica.cpp  MetricaBasica.hpp  MetricaCalidad.cpp  MetricaCalidad.hpp  MetricaEngament.cpp  MetricaEngament.hpp  NodoLista.cpp  NodoLista.hpp  Streamer.cpp  Streamer.hpp  StreamerGratuito.cpp  StreamerGratuito.hpp  StreamerPago.cpp  StreamerPago.hpp  utils.cpp  utils.hpp
Programación_2/Laboratorio_8/Lab08_2025_1/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_8/Lab_10_2022_1(ListaDoblementeEnlazada)/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_8/Lab_8_2024_2/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_8/Lab_9_2023_1(Tema Polimorfismo)/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_8/Laboratorio_07_2023_2/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_9/Lab08_2025_2(ADAPATADO_STL)/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_9/Lab09_2023_2/Programa/: CMakeLists.txt  main.cpp
Programación_2/Laboratorio_9/Lab09_2025_1/Programa/: CMakeLists.txt  main.cpp
(+241 files in other folders)
